Fix: thread details resizing too large

--- a/src/app/support/[customerID]/support.module.css
+++ b/src/app/support/[customerID]/support.module.css
@@ -78,3 +78,7 @@
     '. messageContent messageContent messageContent messageContent optionsMenu'
     '. replies replies replies replies .';
 }
+
+.threadDetailsContainer {
+  flex: 1;
+}
